--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
         "vue": "^2.5.17",
         "vue-router": "^3.0.6",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "toastr": "^2.1.4"
     }
 }
